--- a/Challenges/Day-20/package.json
+++ b/Challenges/Day-20/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "accordion",
+  "name": "02-",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-qr-code": "^2.0.7",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
